勤め先がない人はお勤め先入力画面をスキップ

--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -284,7 +284,8 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>ご職業</label>
+                                    <label>ご職業<br>
+                                           (主婦，学生，年金受給者の方，パート・アルバイト，その他(無職)の方はこのページで入力完了です。)</label>
                                     <p style="color:red;">＊</p></td>
                                 <td>
                                     <div th:each="item : ${jobTypes}" class="field"
